--- a/src/template.html
+++ b/src/template.html
@@ -58,15 +58,17 @@
         <div class="col-md-6 col-sm-12">
           <div class="about-wrapper__info">
             <p class="about-wrapper__info-text">
-              I am a fullstack developer based out of bangalore,India. I specialise in the MERN stack
-              and am very comfortable with the OPs side of things too.I'm happy to help you
-              on anything dev related from vanilla js,node and react to even AWS,docker & kubernetes.
+              I am a fullstack developer based in Bangalore, India. I specialise in the MERN stack
+              and am very comfortable with the DevOps side of things too. I'm happy to help you
+              with Full-stack related technologies such as JavaScript, Node and React.
+              I am an AWS Certified Cloud Solutions Architect, and I am comfortable with DevOps related technologies
+              like Git CI/CD, Docker and Kubernetes.
+
             </p>
             <p class="about-wrapper__info-text">
-              Wanna talk about something non-work related? I never say no to an interesting conversation. I love
-              dogs which is glaringly evident from my picture. I workout to the point that anyone who knows me,
-              calls me a health nut.I enjoy certain videogames too,especially competitive multiplayers.I better stop
-              here,as my hobbies section is getting longer than my career one.
+              Wanna talk about something non-work related? I never say no to good conversation.
+              I enjoy pushing myself on workouts, geek out on videogames,
+              all while still petting my pup (insert sunglasses emoji here).
             </p>
             <!-- <span class="d-flex mt-3">
               <a target="_blank" class="cta-btn cta-btn--resume" href="" disabled>
@@ -93,7 +95,7 @@
               <h3 class="project-wrapper__text-title">Animated scroll template</h3>
               <div>
                 <p class="mb-4">
-                  A template with animations on scroll,very similar to this site.
+                  A template with animations on scroll, very similar to this site.
                   It's a simple yet elegant website UI with a few neat load animations,
                   without looking busy.
                 </p>
@@ -129,11 +131,11 @@
                 <p class="mb-4">
                   A very simple looking yet extremely powerful website which chooses function over form.
                   It's a QOL booster for anyone who wants to multitask on their desktop. Just choose the screen
-                  you want to share and voila,it'll appear as a virtual screen over your current program.
+                  you want to share and voila! It appears as a virtual screen over your current program.
                 </p>
                 <p class="mb-4">
-                  Feel free to use it however you like,whether be it learning something on Udemy or getting through that
-                  boring day at work with a few cheeky youtube videos.
+                  Feel free to use it however you like, whether be it learning something on Udemy or getting through
+                  that slow day at work with a few cheeky YouTube videos.
                 </p>
               </div>
               <a target="_blank" class="cta-btn cta-btn--hero"
@@ -200,9 +202,9 @@
               <div>
                 <p class="mb-4">
                   Planning on starting an influencer account on twitter? I got you covered
-                  with this quote generator which randomly pulls a quote and allows you even tweet it.
-                  You'll be influencing people's minds and decisions in no time! wether that is a good
-                  or bad thing,ill leave that for you to decide.
+                  with this quote generator which randomly pulls a quote and allows you to tweet it.
+                  You'll be influencing people's minds and decisions in no time! whether that is a good
+                  or bad thing, I'll leave that for you to decide.
                 </p>
               </div>
               <a target="_blank" class="cta-btn cta-btn--hero"
@@ -234,10 +236,10 @@
               <h3 class="project-wrapper__text-title">Light/Dark mode template</h3>
               <div>
                 <p class="mb-4">
-                  Sitting in front of the computer for long hours can be a headache,quite literally.
+                  Sitting in front of the computer for long hours can be a headache, quite literally.
                   The high blue light coming off of primarily white webpages only adds fuel to the fire.
-                  Dark mode is a godsend,protects your eyes and looks cool(pun intended) while doing it.
-                  It saves your prefered theme too!
+                  Dark mode is a godsend, It protects your eyes and looks cool (pun intended) while doing it.
+                  The website saves your preferred theme too!
                 </p>
               </div>
               <a target="_blank" class="cta-btn cta-btn--hero"
