--- a/src/template.html
+++ b/src/template.html
@@ -58,7 +58,7 @@
         <div class="col-md-6 col-sm-12">
           <div class="about-wrapper__info">
             <p class="about-wrapper__info-text">
-              I am a fullstack developer based in Bangalore, India. I specialise in the MERN stack
+              I am a Full-Stack developer based in Bangalore, India. I specialise in the MERN stack
               and am very comfortable with the DevOps side of things too. I'm happy to help you
               with Full-stack related technologies such as JavaScript, Node and React.
               I am an AWS Certified Cloud Solutions Architect, and I am comfortable with DevOps related technologies
@@ -129,8 +129,8 @@
               <h3 class="project-wrapper__text-title">Screenshare app</h3>
               <div>
                 <p class="mb-4">
-                  A very simple looking yet extremely powerful website which chooses function over form.
-                  It's a QOL booster for anyone who wants to multitask on their desktop. Just choose the screen
+                  A very simple-looking yet powerful website which chooses function over form.
+                  It's a QOL booster for anyone who wants to multitask on their desktop. Just select the screen
                   you want to share and voila! It appears as a virtual screen over your current program.
                 </p>
                 <p class="mb-4">
@@ -203,7 +203,7 @@
                 <p class="mb-4">
                   Planning on starting an influencer account on twitter? I got you covered
                   with this quote generator which randomly pulls a quote and allows you to tweet it.
-                  You'll be influencing people's minds and decisions in no time! whether that is a good
+                  You'll be influencing people's minds and decisions in no time! Whether that is a good
                   or bad thing, I'll leave that for you to decide.
                 </p>
               </div>
@@ -238,7 +238,7 @@
                 <p class="mb-4">
                   Sitting in front of the computer for long hours can be a headache, quite literally.
                   The high blue light coming off of primarily white webpages only adds fuel to the fire.
-                  Dark mode is a godsend, It protects your eyes and looks cool (pun intended) while doing it.
+                  Dark mode is a godsend. It protects your eyes and looks cool (pun intended) while doing it.
                   The website saves your preferred theme too!
                 </p>
               </div>
