changed hero title

--- a/src/template.html
+++ b/src/template.html
@@ -35,7 +35,7 @@
       <h1 class="hero-title" class="load-hidden">
         Hi there, I'm <span class="text-color-main">Sukeerthi Rathan Kumar</span>
         <br />
-        Here to solve all your web-dev needs!
+        Here to solve all your Web-Dev needs!
       </h1>
       <p class="hero-cta" class="load-hidden">
         <a class="cta-btn cta-btn--hero" href="#contact">Get in touch</a>
