added resume button

--- a/src/template.html
+++ b/src/template.html
@@ -70,11 +70,11 @@
               I enjoy pushing myself on workouts, geek out on videogames,
               all while still petting my pup (insert sunglasses emoji here).
             </p>
-            <!-- <span class="d-flex mt-3">
-              <a target="_blank" class="cta-btn cta-btn--resume" href="" disabled>
+            <span class="d-flex mt-3">
+              <a target="_blank" class="cta-btn cta-btn--resume resume" href="">
                 View Resume
               </a>
-            </span> -->
+            </span>
           </div>
         </div>
       </div>
